--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <canvas id="map"></canvas>
   <div id="menu">
-    <button id="teach-button" onclick="som.teach()">Обучение</button>
-    <button id="teach-all-button">1 итерация обучения</button>
+    <button id="teach-button" onclick="som.teach()">1 итерация обучения</button>
+    <button id="teach-all-button">Полное обучение</button>
     <input type="text" id="custom-input" placeholder="входное значение">
     <button id="find-winner-for-cusom-input">Show on map</button>
   </div>
